Fix navbar behind full page section

--- a/src/components/navbar/Navbar.scss
+++ b/src/components/navbar/Navbar.scss
@@ -4,6 +4,7 @@
   @include not-selectable();
   $p: &;
   position: relative;
+  z-index: 100;
   margin-top: $spacing-lg;
   margin-bottom: $spacing-xxl;
   padding-bottom: $spacing-xs;
